@@ -4,6 +4,11 @@ Next release
 Features
 --------
 
+- New request attribute: ``json``. If the request's ``content_type`` is
+  ``application/json``, this attribute will contain the JSON-decoded
+  variant of the request body.  If the request's ``content_type`` is not
+  ``application/json``, this attribute will be ``None``.
+
 - A new value ``http_cache`` can be used as a view configuration
   parameter.
 
